fix: remove unnecessary files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy to Cloudflare Workers
 
 on:
   repository_dispatch:
-  push:
-    branches: ['master']
+  # push:
+  #   branches: ['master']
 
 jobs:
   build-and-deploy:
