--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,15 +13,23 @@
     // Run `echo <VALUE> | wrangler secret put <NAME>` for each of these
     "BUCKET_OBJECT_EXPIRATION_HOURS": 720,
   },
-  "r2_buckets": [
+  // "r2_buckets": [
+  //   {
+  //     "binding": "R2_STORE",
+  //     "bucket_name": "turborepo-cache",
+  //     "preview_bucket_name": "turborepo-cache-preview",
+  //   },
+  // ],
+  "kv_namespaces": [
     {
-      "binding": "R2_STORE",
-      "bucket_name": "turborepo-cache",
-      "preview_bucket_name": "turborepo-cache-preview",
-    },
+      "binding": "KV",
+      "id": "09dcebcc75f449589da5453da7340e9e",
+      "preview_id": "09dcebcc75f449589da5453da7340e9e"
+    }
   ],
-  // "kv_namespaces": [{"binding": "KV_STORE", "id": "ea20b0eb60f44b13b8d013eeace98ca2", "preview_id": "ea20b0eb60f44b13b8d013eeace98ca2"}],
   "triggers": {
-    "crons": ["0 3 * * *"],
+    "crons": [
+      "0 3 * * *"
+    ],
   },
 }
